fluxcd/apps/main/system-dashboards/lldap-admin-dashboard.yaml
# Traefik Ingress Route for lldap
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: modern-auth
  namespace: lldap
spec:
  forwardAuth:
    address: http://authelia.authelia.svc/api/authz/forward-auth?authelia_url=https%3A%2F%2Fauth.fzymgc.house%2F
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  namespace: lldap
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lldap.fzymgc.house`)
      kind: Rule
      middlewares:
        - name: modern-auth
          namespace: lldap
      services:
        - name: lldap
          port: 17170
  tls:
    secretName: lldap-tls
