fluxcd/apps/main/system-dashboards/longhorn-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: modern-auth
  namespace: longhorn-system
spec:
  forwardAuth:
    address: http://authelia.authelia.svc/api/authz/forward-auth?authelia_url=https%3A%2F%2Fauth.fzymgc.house%2F
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.fzymgc.house`)
      kind: Rule
      middlewares:
        - name: modern-auth
          namespace: longhorn-system
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-tls
